--- a/pages/archive.html
+++ b/pages/archive.html
@@ -11,7 +11,7 @@ comments: page
     {% capture next_month %}{{ post.previous.date | date: "%m" }}{% endcapture %}
   
     {% if forloop.first %}
-      <legend id="{{this_year}}-{{this_month}}">{{this_year}}年-{{this_month}}月</legend>
+      <legend id="{{this_year}}-{{this_month}}">{{this_year}}年{{this_month}}月</legend>
       <ul>
     {% endif %}
     <li><span>{{ post.date | date: "%Y年-%m月-%d日" }}</span> &raquo; 
@@ -23,12 +23,12 @@ comments: page
     {% else %}
       {% if this_year != next_year %}
         </ul>
-        <legend id="{{next_year}}-{{next_month}}">{{next_year}}年-{{next_month}}月</legend>
+        <legend id="{{next_year}}-{{next_month}}">{{next_year}}年{{next_month}}月</legend>
         <ul>
       {% else %}    
         {% if this_month != next_month %}
         </ul>
-        <legend id="{{next_year}}-{{next_month}}">{{next_year}}年-{{next_month}}月</legend>
+        <legend id="{{next_year}}-{{next_month}}">{{next_year}}年{{next_month}}月</legend>
         <ul>
         {% endif %}
       {% endif %}
